# langchain-tutorial

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
chain/: experiments.ipynb
configs/: llm.yml
core/: configs.py  llm.py  utils.py
examples/1. basics/: 1.2 Build a Chatbot.ipynb  1_1_serve.py
examples/chain/: experiments.ipynb
examples/etc/react/: _utils.py
examples/memory/: experiments.ipynb
examples/prompts/: hub.ipynb
examples/retrieval/: experiments.ipynb
prompts/: example.ipynb  experiments.ipynb  hub.ipynb  official_prompts.py  prompt_builder.py
retrieval/: experiments.ipynb
tutorials/1. Basics/: 1.1 Build a Simple LLM Application with LCEL.ipynb  1.3 Build vector stores and retrievers.ipynb  1.4 Build an Agent.ipynb
tutorials/2. Working with external knowledge/: 2.1 Build a Retrieval Augmented Generation (RAG) Application.ipynb  2.2 Conversational RAG.ipynb  2.3 Build a Question-Answering system over SQL data.ipynb
tutorials/etc/chain/: experiments.ipynb
tutorials/etc/prompts/: experiments.ipynb
tutorials/etc/retrieval/: experiments.ipynb
