[tool.poetry]
name = "langchain-tutorial"
version = "0.1.0"
description = "LangChain tutorial"
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.7"
langchain-openai = "^0.1.16"
langchain-community = "^0.2.7"
docarray = "^0.40.0"
easydict = "^1.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
