[tool.poetry]
name = "langchain-tutorial"
version = "0.1.0"
description = "LangChain tutorial"
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.7"
langchain-community = "^0.2.7"
langchainhub = "^0.1.20"
langchain-openai = "^0.1.16"
easydict = "^1.13"
docarray = "^0.40.0"
langserve = {extras = ["all"], version = "^0.2.2"}
faiss-cpu = "^1.8.0.post1"
langgraph = "^0.1.8"
beautifulsoup4 = "^4.12.3"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
